# Vera_Solana_Hackathon

./: .gitignore  README.md  package-lock.json  package.json
src/client/: package-lock.json  package.json
src/client/public/: index.html
src/client/src/: App.tsx  routes.tsx  theme.ts
src/client/src/components/: WalletAdapter.tsx  index.ts
src/client/src/components/Card/: index.tsx
src/client/src/components/GraphCard/: index.tsx
src/client/src/components/Layout/: index.tsx
src/client/src/components/Navigation/: index.tsx
src/client/src/components/Table/: index.tsx
src/client/src/constants/: index.ts
src/client/src/pages/: index.ts
src/client/src/pages/Graph/: index.tsx
src/client/src/pages/Home/: index.js
src/client/src/util/: getPrice.ts  module.ts  utils.ts  vera_contract.json
src/solana-vera/: Cargo.toml
src/solana-vera/src/: lib.rs
src/solana_deposite_vera/: Anchor.toml  README.md
src/solana_deposite_vera/programs/vera-contract/: Cargo.toml
src/solana_deposite_vera/programs/vera-contract/src/: lib.rs
src/solana_deposite_vera/tests/: vera-contract.js
src/test-web3-solana/: package-lock.json  package.json  tsconfig.json
src/test-web3-solana/src/: getPrice.ts  module.ts  savePrice.ts  utils.ts
