
[package]
name = "solana-bpf-vera"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
thiserror = "1.0.24"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"
pyth-client = "0.2.2"

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"
solana-validator = "1.6.7"

[lib]
name = "vera"
crate-type = ["cdylib", "lib"]
